--- a/SampleGames/ShaculaV2/index.html
+++ b/SampleGames/ShaculaV2/index.html
@@ -13,6 +13,7 @@
 	<script language="Javascript" src="../../Framework/jsGFwkFonts.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkEffects.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkGamepad.js"></script>
+	<script language="Javascript" src="../../Framework/jsGFwkJukebox.js"></script>
 	
 	<script language="Javascript" src="scripts/hud.js"></script>
 	<script language="Javascript" src="scripts/gameController.js"></script>
@@ -69,6 +70,26 @@
 				jsGFwk.ResourceManager.addGraphic({ name: "level" + i + "f", source: "images/level" + i + "f.png" });
 			}
         }
+
+		var sound = {};
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/hurt.ogg" };
+		jsGFwk.ResourceManager.addSound({ name: "hurt", sources: sound});
+
+		sound = {};
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/lever.ogg" };
+		jsGFwk.ResourceManager.addSound({ name: "lever", sources: sound});
+
+		sound = {};
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/bat_wings.ogg" };
+		jsGFwk.ResourceManager.addSound({ name: "batwings", sources: sound});
+
+		sound = {};
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/swoosh.ogg" };
+		jsGFwk.ResourceManager.addSound({ name: "swoosh", sources: sound});
+
+		sound = {};
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/portal.ogg" };
+		jsGFwk.ResourceManager.addSound({ name: "portal", sources: sound});
 		
 		var GLOBAL = {
             currentLevel: 10,
@@ -296,6 +317,21 @@
                     GLOBAL.movableWallContainer = jsGFwk.Container.createContainer('movableWalls', MovableWall, true);
                     GLOBAL.sawContainer = jsGFwk.Container.createContainer('sawWalls', Saw, true);
                     
+					jsGFwk.ResourceManager.sounds.hurt.audio.loop = false;
+					jsGFwk.ResourceManager.sounds.hurt.audio.volume = 0.9;
+
+					jsGFwk.ResourceManager.sounds.lever.audio.loop = false;
+					jsGFwk.ResourceManager.sounds.lever.audio.volume = 0.9;
+
+					jsGFwk.ResourceManager.sounds.batwings.audio.loop = true;
+					jsGFwk.ResourceManager.sounds.batwings.audio.volume = 0.7;
+
+					jsGFwk.ResourceManager.sounds.swoosh.audio.loop = false;
+					jsGFwk.ResourceManager.sounds.swoosh.audio.volume = 0.3;
+
+					jsGFwk.ResourceManager.sounds.portal.audio.loop = false;
+					jsGFwk.ResourceManager.sounds.portal.audio.volume = 0.5;
+
 					jsGFwk.Scenes.create({name: "main", gameObjects: [hud, GLOBAL.cloudContainer] });
 
 					jsGFwk.Scenes.create({name: "intro", gameObjects: [Intro, GLOBAL.cloudContainer] });
