--- a/SampleGames/ShaculaV2/index.html
+++ b/SampleGames/ShaculaV2/index.html
@@ -39,9 +39,11 @@
 	<script language="Javascript" src="scripts/inGameItem.js"></script>
 	<script language="Javascript" src="scripts/intro.js"></script>
 	<script language="Javascript" src="scripts/end.js"></script>
+	<script language="Javascript" src="scripts/radar.js"></script>
 	
 	<body style="border:0; margin:0; padding:0;">
 		<canvas id="canvas" width="630" height="480" style="width:100%; height:100%;"></canvas>
+		<canvas id="radarCanvas" width="630" height="480" style="display:none;"></canvas>
 	</body>
 	<script>
 		jsGFwk.settings.canvas = "canvas";
@@ -66,6 +68,7 @@
         
         for (var i = 0; i < Levels.length; i++) {
             jsGFwk.ResourceManager.addGraphic({ name: "level" + i, source: "images/level" + i + ".png" });
+			jsGFwk.ResourceManager.addGraphic({ name: "level" + i + "radar", source: "images/level" + i + "radar.png" });
 			if (Levels[i].foreground) {
 				jsGFwk.ResourceManager.addGraphic({ name: "level" + i + "f", source: "images/level" + i + "f.png" });
 			}
@@ -348,6 +351,7 @@
                             Coffin, Portal, SkeletonDoor,
 							StakeDoor, BatteryContainer,
 							InGameItem, dracul, Light,
+							Radar,
 							ItemContainer,
                             GLOBAL.exitContainer] });
 								
