--- a/SampleGames/ShaculaV2/index.html
+++ b/SampleGames/ShaculaV2/index.html
@@ -87,11 +87,11 @@
 		jsGFwk.ResourceManager.addSound({ name: "batwings", sources: sound});
                 
                 sound = {};
-		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/wavs/fly_loop_up.wav" };
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/fly_loop_up_long.ogg" };
 		jsGFwk.ResourceManager.addSound({ name: "fly_loop_up", sources: sound});
                 
                 sound = {};
-		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/wavs/fly_loop_down.wav" };
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/fly_loop_down_long.ogg" };
 		jsGFwk.ResourceManager.addSound({ name: "fly_loop_down", sources: sound});
 
 		sound = {};
