All sounds in wavs. Fly loop long logic

--- a/SampleGames/ShaculaV2/index.html
+++ b/SampleGames/ShaculaV2/index.html
@@ -88,11 +88,11 @@
 		jsGFwk.ResourceManager.addSound({ name: "batwings", sources: sound});
                 
 		sound = {};
-		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/fly_loop_up.ogg" };
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/fly_loop_up_long.ogg" };
 		jsGFwk.ResourceManager.addSound({ name: "fly_loop_up", sources: sound});
                 
 		sound = {};
-		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/fly_loop_down.ogg" };
+		sound[jsGFwk.ResourceManager.sounds.format.ogg] = { source: "fx/fly_loop_down_long.ogg" };
 		jsGFwk.ResourceManager.addSound({ name: "fly_loop_down", sources: sound});
 
 		sound = {};
