Re started the new version v2 based on suggestions. Use typescript

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <title>jsGame v2</title>
-        <script src="src/jsGame.js"></script>
+        <script src="build/jsGame.js"></script>
     </head>
     <body>
     </body>
     <script>
-        var myGame = jsGame.New();
+        var myGame = new jsGame.Game();
 
-        myGame.sprite.New({
+        /*myGame.sprite.New({
             name: 'bla',
             visible: true,
             update: function (delta) {
@@ -16,6 +16,6 @@
             }
         });
 
-        myGame.start();
+        myGame.start();*/
     </script>
 </html>
