Partial render engine

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             update: function (delta) {
                 this.x++;
             }
-        });
+        });*/
 
-        myGame.start();*/
+        myGame.start();
     </script>
 </html>
