--- a/SampleGames/GameJam2019/index.html
+++ b/SampleGames/GameJam2019/index.html
@@ -14,6 +14,7 @@
 	<script language="Javascript" src="../../Framework/jsGFwkEffects.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkGamepad.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkJukebox.js"></script>
+    <script language="Javascript" src="../../Framework/jsGFwkTimers.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkDebugger.js"></script>
     <body>
         <canvas id="canvas" width="300" height="700" style="cursor:none;"></canvas>
@@ -25,5 +26,7 @@
     <script src="scripts/stats.js"></script>
     <script src="scripts/starfield.js"></script>
     <script src="scripts/cloud.js"></script>
+    <script src="scripts/particles.js"></script>
+    <script src="scripts/aidcapsule.js"></script>
     <script src="scripts/main.js"></script>
 </html>
