--- a/SampleGames/GameJam2019/index.html
+++ b/SampleGames/GameJam2019/index.html
@@ -28,5 +28,9 @@
     <script src="scripts/cloud.js"></script>
     <script src="scripts/particles.js"></script>
     <script src="scripts/aidcapsule.js"></script>
+    <script src="scripts/asteroidController.js"></script>
+    <script src="scripts/earth.js"></script>
+    <script src="scripts/hud.js"></script>
+    <script src="scripts/angryasteroid.js"></script>
     <script src="scripts/main.js"></script>
 </html>
