--- a/SampleGames/GameJam2019/index.html
+++ b/SampleGames/GameJam2019/index.html
@@ -32,5 +32,6 @@
     <script src="scripts/earth.js"></script>
     <script src="scripts/hud.js"></script>
     <script src="scripts/angryasteroid.js"></script>
+    <script src="scripts/globalController.js"></script>
     <script src="scripts/main.js"></script>
 </html>
