--- a/SampleGames/GameJam2019/index.html
+++ b/SampleGames/GameJam2019/index.html
@@ -16,6 +16,14 @@
     <script language="Javascript" src="../../Framework/jsGFwkJukebox.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkTimers.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkDebugger.js"></script>
+    <style>
+        body {
+            background-color: black;
+            text-align: center;
+            padding-top: 0;
+            margin-top: 0;
+        }
+    </style>
     <body>
         <canvas id="canvas" width="300" height="700" style="cursor:none;"></canvas>
     </body>
@@ -33,5 +41,7 @@
     <script src="scripts/hud.js"></script>
     <script src="scripts/angryasteroid.js"></script>
     <script src="scripts/globalController.js"></script>
+    <script src="scripts/powerup.js"></script>
+    <script src="scripts/endgame.js"></script>
     <script src="scripts/main.js"></script>
 </html>
