--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwk.js"></script>
-	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwk2dFastAnimation.js"></script>
-	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwkRM.js"></script>
-	<script src="https://rawgithub.com/MatiasIac/jsGFwk/master/Framework/jsGFwkIO.js"></script>
+	
+	<script src="https://raw.githubusercontent.com/MatiasIac/jsGFwk/master/Framework/jsGFwk.js"></script>
+	<script src="https://raw.githubusercontent.com/MatiasIac/jsGFwk/master/jsGFwk2dFastAnimation.js"></script>
+	<script src="https://raw.githubusercontent.com/MatiasIac/jsGFwk/master/jsGFwkRM.js"></script>
+	<script src="https://raw.githubusercontent.com/MatiasIac/jsGFwk/master/jsGFwkIO.js"></script>
 	
     <title>jsGFwk by Matias Iacono</title>
   </head>
