Timer for Asadator

--- a/SampleGames/asadator/index.html
+++ b/SampleGames/asadator/index.html
@@ -21,6 +21,7 @@
     </body>
     <script src="scripts/gameController.js"></script>
     <script src="scripts/corte.js"></script>
+    <script src="scripts/pedido.js"></script>
     <script src="scripts/parrilla.js"></script>
     <script src="scripts/carbon.js"></script>
     <script src="scripts/fogon.js"></script>
