Almost ASADATOR is finish

--- a/SampleGames/asadator/index.html
+++ b/SampleGames/asadator/index.html
@@ -17,13 +17,15 @@
     <script language="Javascript" src="../../Framework/jsGFwkTimers.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkDebugger.js"></script>
     <body>
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <canvas id="canvas" width="950" height="600"></canvas>
     </body>
     <script src="scripts/gameController.js"></script>
     <script src="scripts/corte.js"></script>
     <script src="scripts/pedido.js"></script>
+    <script src="scripts/gaucho.js"></script>
     <script src="scripts/parrilla.js"></script>
     <script src="scripts/carbon.js"></script>
     <script src="scripts/fogon.js"></script>
+    <script src="scripts/dinero.js"></script>
     <script src="scripts/main.js"></script>
 </html>
