Asadator almost done

--- a/SampleGames/asadator/index.html
+++ b/SampleGames/asadator/index.html
@@ -16,9 +16,17 @@
     <script language="Javascript" src="../../Framework/jsGFwkJukebox.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkTimers.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkDebugger.js"></script>
-    <body>
-        <canvas id="canvas" width="950" height="600"></canvas>
+    <script language="Javascript" src="../../Framework/jsGFwkWebStorage.js"></script>
+    <body style="border:0; margin:0; padding:0; background-color: black;">
+        <div style="width: 100%; 
+                    height: 100vh;
+                    vertical-align: middle;
+                    text-align: center;">
+            <canvas id="canvas" width="950" height="600"
+                    style="padding: 0; margin: auto; display: block; position: absolute; top: 0; bottom: 0; left: 0; right: 0;"></canvas>
+        </div>
     </body>
+    <script src="scripts/initgame.js"></script>
     <script src="scripts/gameController.js"></script>
     <script src="scripts/corte.js"></script>
     <script src="scripts/pedido.js"></script>
