--- a/asadator/index.html
+++ b/asadator/index.html
@@ -2,21 +2,21 @@
     <head>
         <title>Asadator!</title>
     </head>
-    <script language="Javascript" src="../Framework/jsGFwk.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwk2dFastAnimation.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkContainer.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkIO.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkCollisions.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkRM.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkSprites.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkScenes.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkFonts.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkEffects.js"></script>
-	<script language="Javascript" src="../Framework/jsGFwkGamepad.js"></script>
-    <script language="Javascript" src="../Framework/jsGFwkJukebox.js"></script>
-    <script language="Javascript" src="../Framework/jsGFwkTimers.js"></script>
-    <script language="Javascript" src="../Framework/jsGFwkDebugger.js"></script>
-    <script language="Javascript" src="../Framework/jsGFwkWebStorage.js"></script>
+    <script language="Javascript" src="framework/jsGFwk.js"></script>
+	<script language="Javascript" src="framework/jsGFwk2dFastAnimation.js"></script>
+	<script language="Javascript" src="framework/jsGFwkContainer.js"></script>
+	<script language="Javascript" src="framework/jsGFwkIO.js"></script>
+	<script language="Javascript" src="framework/jsGFwkCollisions.js"></script>
+	<script language="Javascript" src="framework/jsGFwkRM.js"></script>
+	<script language="Javascript" src="framework/jsGFwkSprites.js"></script>
+	<script language="Javascript" src="framework/jsGFwkScenes.js"></script>
+	<script language="Javascript" src="framework/jsGFwkFonts.js"></script>
+	<script language="Javascript" src="framework/jsGFwkEffects.js"></script>
+	<script language="Javascript" src="framework/jsGFwkGamepad.js"></script>
+    <script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
+    <script language="Javascript" src="framework/jsGFwkTimers.js"></script>
+    <script language="Javascript" src="framework/jsGFwkDebugger.js"></script>
+    <script language="Javascript" src="framework/jsGFwkWebStorage.js"></script>
     <body style="border:0; margin:0; padding:0; background-color: black;">
         <div style="width: 100%; 
                     height: 100vh;
