--- a/gamejam2019/index.html
+++ b/gamejam2019/index.html
@@ -2,20 +2,20 @@
     <head>
         <title></title>
     </head>
-    <script language="Javascript" src="../framework/jsGFwk.js"></script>
-	<script language="Javascript" src="../framework/jsGFwk2dFastAnimation.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkContainer.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkIO.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkCollisions.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkRM.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkSprites.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkScenes.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkFonts.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkEffects.js"></script>
-	<script language="Javascript" src="../framework/jsGFwkGamepad.js"></script>
-    <script language="Javascript" src="../framework/jsGFwkJukebox.js"></script>
-    <script language="Javascript" src="../framework/jsGFwkTimers.js"></script>
-    <script language="Javascript" src="../framework/jsGFwkDebugger.js"></script>
+    <script language="Javascript" src="framework/jsGFwk.js"></script>
+	<script language="Javascript" src="framework/jsGFwk2dFastAnimation.js"></script>
+	<script language="Javascript" src="framework/jsGFwkContainer.js"></script>
+	<script language="Javascript" src="framework/jsGFwkIO.js"></script>
+	<script language="Javascript" src="framework/jsGFwkCollisions.js"></script>
+	<script language="Javascript" src="framework/jsGFwkRM.js"></script>
+	<script language="Javascript" src="framework/jsGFwkSprites.js"></script>
+	<script language="Javascript" src="framework/jsGFwkScenes.js"></script>
+	<script language="Javascript" src="framework/jsGFwkFonts.js"></script>
+	<script language="Javascript" src="framework/jsGFwkEffects.js"></script>
+	<script language="Javascript" src="framework/jsGFwkGamepad.js"></script>
+    <script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
+    <script language="Javascript" src="framework/jsGFwkTimers.js"></script>
+    <script language="Javascript" src="framework/jsGFwkDebugger.js"></script>
     <style>
         body {
             background-color: black;
