--- a/asadator/index.html
+++ b/asadator/index.html
@@ -13,7 +13,7 @@
 	<script language="Javascript" src="framework/jsGFwkFonts.js"></script>
 	<script language="Javascript" src="framework/jsGFwkEffects.js"></script>
 	<script language="Javascript" src="framework/jsGFwkGamepad.js"></script>
-    <script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
+    <!-->script language="Javascript" src="framework/jsGFwkJukebox.js"></script-->
     <script language="Javascript" src="framework/jsGFwkTimers.js"></script>
     <script language="Javascript" src="framework/jsGFwkDebugger.js"></script>
     <script language="Javascript" src="framework/jsGFwkWebStorage.js"></script>
