--- a/ar/index.html
+++ b/ar/index.html
@@ -11,13 +11,13 @@
     <body style='margin : 0px; overflow: hidden;'>
         <a-scene embedded arjs>
             <a-assets>
-                <a-asset-item id="avo" src="avo/Avocado.gltf"></a-asset-item>
-                <!--a-asset-item id="monster" src="monster/Monster.gltf"></a-asset-item-->
+                <!--a-asset-item id="avo" src="avo/Avocado.gltf"></a-asset-item-->
+                <a-asset-item id="monster" src="monster/Monster.gltf"></a-asset-item>
             </a-assets>
             <!-- a-box position='0 0.5 0' material='opacity: 0.5;'></a-box-->
             <a-marker-camera preset='hiro'>
-                <!--a-entity gltf-model="#monster" scale="0.05 0.05 0.05"></a-entity-->
-                <a-entity gltf-model="#avo" scale="0.3 0.3 0.3"></a-entity>
+                <a-entity gltf-model="#monster" scale="0.05 0.05 0.05"></a-entity>
+                <!--a-entity gltf-model="#avo" scale="0.3 0.3 0.3"></a-entity-->
             </a-marker-camera>
         </a-scene>
     </body>
