--- a/ar/index.html
+++ b/ar/index.html
@@ -22,10 +22,31 @@
         </a-scene>
     </body>
 	<script>
-		var avoMarker = document.getElementById('avoMarker');
+		var isVisible = false;
+		
+		AFRAME.registerComponent('markerhandler', {
+			init: function() {
+				this.tick = AFRAME.utils.throttleTick(this.tick, 500, this);
+			},
+			tick: function(t, dt) {
+				
+				if (document.querySelector("#avoMarker").object3D.visible == true && isVisible == false) {
+					isVisible = true;
+					alert('visible');
+				} else {
+					isVisible = false;
+				}
+
+			}
+		});
+	
+	
+		/*var avoMarker = document.getElementById('avoMarker');
 		
 		avoMarker.addEventListener("markerFound", function() {
 			alert('found');
-		});
+		});*/
+		
+		
 	</script>
 </html>
