--- a/ar/index.html
+++ b/ar/index.html
@@ -9,6 +9,9 @@
     <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <body style='margin : 0px; overflow: hidden;'>
+		<div style="width: 100px; height: 200px; background-color:red;">
+			some text
+		</div>
         <a-scene embedded arjs>
             <a-assets>
                 <a-asset-item id="avo" src="avo/Avocado.gltf"></a-asset-item>
