--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <script src="sprites.js" lang="javascript"></script>
     <script src="resourcesManager.js" lang="javascript"></script>
     <script src="imageFilters.js" lang="javascript"></script>
+    <script src="keyboardIO.js" lang="javascript"></script>
+    <script src="touchIO.js" lang="javascript"></script>
     <body>
 
         <canvas id="canvas" width="640" height="480"></canvas>
@@ -17,12 +19,20 @@
             const collisions = new Collisions();
             const resourceManager = new ResourcesManager();
             const sprites = new Sprites();
+            const keyboardIO = new KeyboardIO();
+            const touchIO = new TouchIO();
 
             game.include(animator);
             game.include(collisions);
             game.include(resourceManager);
             game.include(sprites);
-            
+            game.include(keyboardIO);
+            game.include(touchIO);
+
+            touchIO.registerTouch(function (c) {
+                console.log(c);
+            });
+
             resourceManager.addGraphic({ 
                 name: "graphics", 
                 source: "./examples/jumpingBase.png" 
@@ -66,14 +76,38 @@
                 y: 200,
                 width: 20,
                 height: 20,
-                update: function (delta) {
-                    sprites.SPRITES_BAG.fallingGuy.moveNextSprite();
-                },
                 draw: function (context) {
                     context.fillStyle = '#0000FF';
                     context.fillRect(this.x, this.y, this.width, this.height);
+                }
+            };
 
-                    context.drawImage(sprites.SPRITES_BAG.fallingGuy.sprite.image, 400, 10);
+            let fallingGuyObject = {
+                name: crypto.randomUUID(),
+                isVisible: true,
+                x: 200,
+                y: 200,
+                update: function (delta) {
+                    sprites.SPRITES_BAG.fallingGuy.moveNextSprite();
+
+                    if (keyboardIO.getActiveKeys()[KeyboardIO.KEYS.W] === true) {
+                        this.y -= 1;
+                    }
+
+                    if (keyboardIO.getActiveKeys()[KeyboardIO.KEYS.S] === true) {
+                        this.y += 1;
+                    }
+
+                    if (keyboardIO.getActiveKeys()[KeyboardIO.KEYS.D] === true) {
+                        this.x += 1;
+                    }
+
+                    if (keyboardIO.getActiveKeys()[KeyboardIO.KEYS.A] === true) {
+                        this.x -= 1;
+                    }
+                },
+                draw: function (context) {
+                    context.drawImage(sprites.SPRITES_BAG.fallingGuy.sprite.image, this.x, this.y);
                 }
             };
 
@@ -94,6 +128,7 @@
                 // adding the objects to the game
                 game.createObject(redRectangleObject);
                 game.createObject(blueRectangleObject);
+                game.createObject(fallingGuyObject);
             };
 
             game.start();
